# 3xui-shop

./: .env.example  .env.production.example  BOTFATHER_SETUP.md  Dockerfile  README.md  README.ru_RU.md  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py  sub_proxy_server.py  xui_config.py
app/bot/i18n/: emoji_ids.example.json  emoji_ids.json  emoji_registry.json  fa.py
app/bot/middlewares/: __init__.py  channel_gate.py  maintenance_gate.py  vpn_service.py
app/bot/services/: bootstrap.py  festival_promo.py  festival_settings.py  maintenance.py  manual_assign.py  node_sync.py  (+10 more)
app/data/: festival.example.json  plans.example.json  plans.json  renewal.example.json
app/db/: database.py
app/repair/: __main__.py  gateway.py  message.py
app/scripts/: assign_panel_client.py  manual_purchase.py  record_purchase_transaction.py
deploy/: PRODUCTION_SETUP.md  compose.sh  deploy.sh  docker-compose.prod.yml  pull.sh  set-webhook.sh  setup-data-dir.sh  verify-webhook.sh
deploy/backup/: DISASTER-RECOVERY.md  install-local-backup.sh  lib.sh  run-local-backup.sh
deploy/nginx/: docker-entrypoint.sh  nginx.conf  nginx.http.conf  nginx.https.conf
docs/: EMOJI.md  MANUAL_PANEL_CLIENT.md
scripts/: apply_verified_emoji_map.py  assign-panel-client.sh  assign_panel_client.py  auto_map_emoji_registry.py  delete-bot-users.sh  delete-bot-users.sql  delete-transactions.sh  list_emoji_packs.py  manual-purchase.sh  record-purchase-transaction.sh  reset-test-data.sh  reset-test-data.sql  restore-panel-clients-host.sh  sync_emoji_packs.py  verified_emoji_indices.json
(+42 files in other folders)
