[tool.poetry]
name = "nc-vpn-bot"
version = "2.0.0"
description = "NC VPN Telegram bot — Persian-only, 3X-UI v3.3.1, multi-config, card-to-card payments."
authors = ["nc-vpn"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.20.0"
environs = "^11.2.1"
cachetools = "^5.5.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"   # local dev only; prod uses asyncpg
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = "^5.2.1"
apscheduler = "^3.11.0"
aiohttp = "^3.11.0"
jdatetime = "^5.0.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
